Fixed horizontal scrolling bug.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -34,6 +34,7 @@ h1,h2,h3,h4,h5 {
 .row {
     padding-left:15px;
     padding-right:15px;
+    margin: 0;
 }
 
 .sidebar {
